# Ap-TraderBot

./: .gitignore  Cargo.toml  log_BVC.txt  log_RCNZ.txt  market.csv  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.rs  tra_vis.rs  trader.rs
src-tauri/: .gitignore  Cargo.toml  log_BVC.txt  log_RCNZ.txt  tauri.conf.json
src-tauri/src/: main.rs  trader.rs
src/data_models/: market.rs  mod.rs
src/trader/: main.rs  mod.rs  trader_macca.rs  trader_ricca.rs
src/trader/trader_ricca/: consts.rs  mod.rs  trader_main.rs
src/trader/trader_ricca/trader_main/: market_calculations.rs  market_intetactions.rs  market_strategies.rs
src/utils/: colors.rs  consts.rs  market.rs  mod.rs  style.rs  utils.rs
trader/: Cargo.toml
trader/src/: main.rs
