[package]
name = "trader"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
tracing = "0.1.37"



#rcnz_market = {version = "0.1.1", registry = "kellnr" }
#BVC = {version = "0.1.6", registry = "kellnr" }
#bose = {version = "1.0.72", registry = "kellnr" }
#unitn_market_2022 = {version = "1.0.10", registry = "kellnr" }
eframe = "0.20.1"
rand = "0.8.5"
tracing-subscriber = "0.3.16"
itertools = "0.10.2"
csv = "1.2.2"
lazy_static = "1.4.0"