[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rcnz_market = {version = "0.1.0", registry = "kellnr" }
BVC = {version = "0.1.6", registry = "kellnr" }
bose = {version = "1.0.72", registry = "kellnr" }
unitn_market_2022 = {version = "1.0.10", registry = "kellnr" }